--- a/styles.css
+++ b/styles.css
@@ -354,10 +354,39 @@
     padding: 0;
 }
 
+@font-face {
+  font-family: Roboto;
+  src: url(fonts/Roboto/Roboto-Regular.ttf);
+}
 
 
   body {
+    height: 100vh;
     display: grid;
+    grid-template: 1fr / 1fr 4fr;
+
+  }
+
+  aside {
+    background-color: rgba(25, 146, 212, 1);
+    color: white;
+    padding: 15px;
+    font-family:'Roboto';
+    font-weight: 600;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+  }
+
+  aside > ul {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+  }
+
+  aside > ul > li {
+    display: flex;
+    gap: 20px;
   }
 
   ul {
@@ -366,14 +395,21 @@
 
   .main-logo, li{
     display: flex;
+    align-items: center;
+    gap: 10px;
+  }
+
+  .main-logo > div > p {
+    font-size: 1.3rem;
+    font-weight: 600;
   }
 
   .main-icon {
-    width: 2rem;
+    width: 2.3rem;
   }
 
   .icons {
-    width: 1rem;
+    width: 1.1rem;
   }
 
   
