--- a/styles.css
+++ b/styles.css
@@ -367,6 +367,12 @@
 
   }
 
+
+
+
+
+  /***Sidebar***/
+
   aside {
     background-color: rgba(25, 146, 212, 1);
     color: white;
@@ -392,6 +398,12 @@
   ul {
     list-style-type: none;
   }
+
+
+
+
+  /***Header***/
+
 
   .main-logo, li{
     display: flex;
@@ -427,7 +439,6 @@
   .containers {
     display: flex;
     flex-direction: column;
-    margin: 15px;
   }
 
   header {
@@ -436,7 +447,7 @@
     gap: 15px;
     font-family: 'Roboto', Arial, Helvetica, sans-serif;
     font-weight: 600;
-    margin: 5px 30px 5px 15px;
+    margin: 20px 45px 20px 30px;
   }
 
   .search-bar {
@@ -453,6 +464,7 @@
   .user-greeting, form {
     display: flex;
     gap: 15px;
+    align-items: center;
   }
 
   form > .search-image {
@@ -508,3 +520,29 @@
     font-size: 0.8rem;
     font-weight: 600;
   }
+
+
+
+  /*Main*/
+
+main {
+  display: grid;
+  grid-template: 100vh / 3fr 1fr;
+  grid-template-areas: "projects announcements";
+  font-family: 'Roboto', Arial, Helvetica, sans-serif;
+}
+
+.projects {
+  display: flex;
+  flex-direction: column;
+  grid-area: projects;
+}
+
+.announcements {
+  grid-area: announcements;
+}
+
+.project-cards {
+  display: grid;
+  grid-template: repeat(3, minmax(150px, 1fr) / repeat(auto-fit, 300px));
+}
